main.css
* {
border:0;
margin:0;
padding:0;
box-sizing: border-box;
}

body {
  font-family: "Open Sans", serif;
  font-size: 12px;
}

#input-container {
  background-color: #E5F3F2 ;
  display: flex;
  justify-content: center;
}

#input-content,
footer {
  width: 70%;
  margin: auto;
}

h1 {
  color: #00A79D ;
  font-family: "Roboto Slab", serif;
  font-size: 3rem;
  margin: 3% auto 3% auto;
  text-align: center;
}

#h1-style {
  color: #6D6E71 ;
}

input {
  align-self: center;
  border: solid #D1D3D4 0.5px;
  box-shadow: 0 0 0 .1rem rgba(187,189,191,0.3);
  color: #939598 ;
  font-size: 1.5rem;
  letter-spacing: .05rem;
  margin: 0 0 2% 0%;
  padding: 0.2% 1.5% 0.2% 1%;
  width: 100%;
}

#save-button,
#show-more-button {
  background-color: #00A79D ;
  color: #FFFFFF ;
  font-size: 1.5rem;
  margin: 0 0 3% 0;
  padding: 1% 0;
  width: 100%;
}

.importance-filter-button:hover,
#save-button:hover,
#show-more-button:hover {
  background-color: #045e55;
  color: #FFFFF;
}

#save-button:disabled,
#show-more-button:disabled, 
input[type="button"].inactive {
  background-color: #F5F5F5;
  color: #00A79D;
}

input[type="submit"]:hover{
  background-color: #045e55;
  color: #FFFFF;
}

#search-container {
  text-align: center;
  width: 100%;
}

#search-input {
  margin: 2% 0 2% 0;
  width: 70%;
}

h4 {
  color: #00A79D ;
  font-size: 1.5rem;
  margin: 0 0 0.5rem 0;
}

#importance-filter-container {
  display: flex;
  justify-content: space-between;
  width: 70%;
  margin: auto;
}

.importance-filter-button {
  background-color: #00A79D ;
  color: #FFFFFF ;
  font-size: 1.5rem;
  width: 19%;
  border-radius: 2rem;
  margin: 0 0 4% 0;
  padding: 1% 1% 1% 1%;
}

button {
  display: inline-block;
  height: 25px;
  width: 25px;
  padding: 0 0 0 0;
  margin: 0 2% 0 0;

}

#task-container {
  align-items: center;
  display: flex;
  flex-direction: column;

}

.task-element {
  position: relative;
  width: 70%;
}

h2 {
  display: block;
  color: #6D6E71 ;
  font-family: "Roboto Slab", serif;
  font-weight: 700;
  font-size: 1.5rem;
}

h3 {
  display: inline-block;
  color: #6D6E71 ;
  font-family: "Roboto Slab", serif;
  font-weight: 700;
  font-size: 1rem;
  vertical-align: top;
  margin: 0 0.5rem 0 0;
  line-height: 24px;

}

.delete-button {
  background: url("images/delete.svg") no-repeat;
  position: absolute;
  right: .55rem;
  top: 0.35rem;
  margin: 0 0 0 0;
}

.delete-button:hover {
  background: url("images/delete-hover.svg") no-repeat;
}

.task-description {
  color: #939598 ;
  font-size: 1.2rem;
  padding: 0 0 1rem 0;
  text-align: justify;
  word-wrap: break-word;
}

.importance-up-button {
  background: url("images/upvote.svg") no-repeat;

} 
.importance-down-button {
  background: url("images/downvote.svg") no-repeat;
}

.importance-up-button:hover {
  background: url("images/upvote-hover.svg") no-repeat;
}

.importance-down-button:hover {
  background: url("images/downvote-hover.svg") no-repeat;
}

.importance-label {
  /*line-height: 24px;*/
  /*margin: 0 0.5rem 0 0.5rem;*/
}

.importance-value {
  line-height: 24px;
  font-family: "Open Sans", serif;
  font-weight: 400;
}

.task-complete {
  float: right;
  width: 28px;
  height: 25px;
  box-shadow: none;
}

.task-complete-label {
  float: right;
}

hr {
  background-color: #D1D3D4 ;
  border: none;
  height: 1px;
  margin: 1rem 0 1rem 0;
}

@media screen and (max-width: 720px) {

  #input-content,
  footer {
    align-content: center;
    width: 505px
  }

  h1 {
    font-size: 2rem;
    margin: 2% auto 2% auto;
    width: 50%;
  }

  input,
  #save-button,
  .importance-filter-button,
  #show-more-button {
    height: 5%; 
    margin: 1.1% 0 1.2% 0;
    font-size: 1.2rem;
  }

  #save-button,
  #show-more-button {
    margin: 1.1% 0 2% 0;
  }

  #search-input, 
  #importance-filter-container {
    width: 505px;
  }

  h4 {
  font-size: 1.2rem;
  margin: 0 0 0.3rem 0;
  }

  .importance-filter-button {
    width: 96px;
    border-radius: 1rem;
    margin: 0 0 4% 0;
    height: 2rem;
  }


  .task-element {
    width: 505px;
    height: 5%;
    margin: 0 0 2% 1px;
    font-size: 1.2rem;
  }

  h2 {
    font-size: 1.2rem;
  }

  h3 {
    font-size: .8rem;
    margin: 0 0.3rem 0 0;
  }

  button {
    width: 20px;
    height: 20px;
    margin: 0 0.3rem 0 0;
  }

  .task-description {
    padding: 0 0 0.5rem 0;
  }

  .task-importance-element,
  .task-details {
    font-size: 1rem;
  }

  .task-complete {
    height: 15px;
  }

  hr {
  margin: 0.5rem 0 1rem 0;
  }

}

@media screen and (max-width: 520px) {

  #input-content {
    width: 95vw;
    margin: 0 0 2.5% 0;
  }

  #title-input
  #task-input,
  #save-button,
  .task-element {
    width: 95vw;
    margin: 0 0 2% 0;
  }

  #save-button {
    margin-bottom: 1%;
  }

  #search-input {
    width: 95vw;
    margin: 3% 0 2% 0;
  }

  #importance-filter-container {
    width: 95vw;
  }

  .importance-filter-button {
    width: 17%;
    font-size: 0.8rem;
    border-radius: 0.7rem;
  }

  footer {
    width: 95vw;
  }

  #show-more-button {
    width: 95vw;
    margin: auto;
  }


  
}

@media screen and (max-width: 320px) {
 
/*do not shrink below 320px*/

  body {
    width: 320px;
  }

  h1,
  #input-content,
  #title-input
  #task-input,
  #save-button,
  .task-element,
  #search-input,
  #importance-filter-container,
  footer,
  #show-more-button {
    width: 300px;
  }

  .importance-filter-button {
    font-size: 0.6rem;
  }

  
}

